5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1791_3140.log
== TEST (2019-05-29 15:11:04) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i]**5/n)**1/5
	M=M+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:56) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i]**5/V)**1/5
	M=M+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:00) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i]**5/v)**1/5
	M=M+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:23) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i]**5/v)**1/5
	M=M+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:55) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i]**5/v)**1/5
	M=M+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:28) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
m=0
while(i<size(v)):
	M=(v[i]**5/v)**1/5
	m=m+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:35) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
m=0
while(i<size(v)):
	M=(v[i]**5/v)**1/5
	m=m+1
i=i+1
print(round(M,2))

	
	
	
				 
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:14) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=M+(v[i]**5/v)**1/5
	i=i+1
print(round(sum(v[i]**5/5,2)

	
	
	
				 
				  
-- ERROR:
File "XXXX", line 15
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:43) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=M+(v[i]**5/v)**1/5
	i=i+1
print(round(sum(v[i]**5/5,2))				  
-- ERROR:
File "XXXX", line 9
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:46) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=M+(v[i]**5/v)**1/5
	i=i+1
print(round(sum(v[i]**5/5,2)))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:51) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=M+(v[i]**5/v)**1/5
	i=i+1
print(round(sum(v[i]**5)/5,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:54) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=M+(v[i]**5/v)**1/5
	i=i+1
print(round(sum(v[i]**5)/5,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:25:59) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=M+(v[i]**5/v)**1/5
	i=i+1
print(round(sum(v[i]**5)/5,2))				  
-- EXECUTION TIME:
0.446468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3140/main.py", line 8, in <module>
    print(round(sum(v[i]**5)/5,2))				  
IndexError: index 7 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:30) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
M= ((v[i])**5/v)1/5
print(round(sum(v[i]**5)/5,2))				  
-- ERROR:
File "XXXX", line 8
    M= ((v[i])**5/v)1/5
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:42) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
M= ((v[i])**5/v)**1/5
print(round(sum(v[i]**5)/5,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:04) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
M= ((v[i])**5/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:55) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
i=i+1

M =((v[i])**5/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:34:37) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1

M =((v[i])**5/v)**1/5
print(round(M,2))				  
-- EXECUTION TIME:
1.13453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3140/main.py", line 9, in <module>
    M =((v[i])**5/v)**1/5
IndexError: index 7 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:34:50) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1

M =((v[i])**5/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:43) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1

M =(M/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:12) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
M =(M/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:36:28) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
	M =(M/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:37:36) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
M =(M/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:38:43) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
	
M =(M/v)**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:26) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:43) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:07) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
m=0
while(i<size(v)):
	M=(v[i])**5 
	m=m+1
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:46) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
m=0
while(i<size(v)):
	M=(v[i])**5
	m=m+1
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- EXECUTION TIME:
0.483884
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
879.16
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
417.44
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
138.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:48) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
m=0
while(i<size(v)):
	M=(v[i])**5
	m=m+1
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:25) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
M=0
while(i<size(v)):
	M=(v[i])**5
	M=M+1
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:44) 
-- CODE:
from numpy import*
v=array(eval(input("Digite  os numeros: ")))
i=0
m=0
while(i<size(v)):
	M=(v[i])**5
	m=m+1
	i=i+1
	
M =(M/size(v))**1/5
print(round(M,2))				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
